--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 /*
  配布元: ミルログ - Flexboxを使ってグリッドレイアウトなWordPressトップページを作る【レスポンシブ対応】
  https://www.mirucon.com/2016/06/22/flexbox-grid-design/
- 最終更新: 2016-06-24
-
+ 最終更新: 2016-06-24 17:30
+ 連絡先: https://www.mirucon.com/contact/
 */
 #main {
  display: -webkit-box;
